--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
         </nav>
     </header>
 
-
+    <!-- <div style="background-color: black; border: thick solid blue;"> -->
     <section class="beginning">
             <div>
                 
                     <div class="text">
-                        <a class="link" href="#"><span class="material-symbols-outlined left">filter_vintage</span> &nbsp;The 2024 PiggyVest Savings Report <span class="material-symbols-outlined right">chevron_right</span></a>
+                        <button class="link"><span class="material-symbols-outlined left">filter_vintage</span> &nbsp;The 2024 PiggyVest Savings Report <span class="material-symbols-outlined right">chevron_right</span></button>
                         <div>
                             <h4>The Better Way to Save & Invest</h4>
                             <p>Piggyvest helps over 5 million customers achieve their financial goals by helping them save and invest with ease.</p>
                         </div>
-                        <div style=" display: flex; gap: 20px;">
+                        <div style=" display: flex; gap: 30px;" id="store">
                             <a href="https://apps.apple.com/ng/app/piggyvest/id1263117994"><img src="https://storage.googleapis.com/new-abeg-avatar-dev/piggyvest-cms-staging/white_Apple_Logo_768cf7ce21/white_Apple_Logo_768cf7ce21.svg" alt="">Get on iPhone</a>
 
                             <a href="https://play.google.com/store/apps/details?id=com.piggybankng.piggy"><img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/google_icon_9867fc9be6/google_icon_9867fc9be6.svg" alt="">Get on Android</a>
@@ -107,19 +107,29 @@
                 <div class="images">
                     <div class="container">
                         <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/pexels_ketut_subiyanto_4350099_bc5e069ebe/pexels_ketut_subiyanto_4350099_bc5e069ebe.avif" alt="">
-                        <div>
+                        <div class="inner">
                             <img class="one" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_80_bb919b04c6/Frame_80_bb919b04c6.png" alt="">
                             <img class="two" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_79_49decc7ace/Frame_79_49decc7ace.png" alt="">
                             <img  class="three" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_1020_9d3586276d/Frame_1020_9d3586276d.png" alt="">
                             <img  class="four" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_78_6aa483ac0a/Frame_78_6aa483ac0a.png" alt="">
                             <img  class="five" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_18_c908af085c/Frame_18_c908af085c.png" alt="">
-                            <img  class="six" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_82_17e65ddb4c/Frame_82_17e65ddb4c.png" alt="">
+                            <img  class="six" src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/Frame_82_17e65ddb4c/Frame_82_17e65ddb4c.png" alt=""> 
                         </div>
                     </div>
                 </div>
             </div>
     </section>
 
-    <section></section>
+    <section class="security">
+        <div>
+            <img src="https://storage.googleapis.com/new-abeg-avatar-dev/piggyvest-cms-staging/securitylock_7d5d97e5a1/securitylock_7d5d97e5a1.svg" alt="">
+            <div>
+                <h5>Your security is our priority</h5>
+                <p>PiggyVest uses the highest level of Internet Security and it is secured by 256 bits SSL security encryption to ensure that your information is completely protected from fraud.</p>
+                <a href="#"><span class="material-symbols-outlined arrow">subdirectory_arrow_right</span>More on our security measures</a>
+            </div>
+        </div>
+    </section>
+    <!-- </div> -->
 </body>
 </html>
